updating out details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a junior software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Honolulu, HI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Rock Climbing, Cooking, Running</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Building and owning a successful e-commerce website/blog.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Los Angeles</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Obtain the skills to a get jobs that further teach me how to build, launch, and operate an online business. </p>
     </section>
 
     <footer id="footer">
