Updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Los Angeles</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Obtain the skills to a get jobs that further teach me how to build, launch, and operate an online business. </p>
+      <p>Obtain the skills to get jobs that further teach me how to build, launch, and operate an online business. </p>
     </section>
 
     <footer id="footer">
